@@ -37,15 +37,15 @@ span.withdrawn	{background-color:#ccc; border-radius:3px; color:#444; font-size:
 .sticky			{position:sticky; top:-1px; z-index:2;}
 .nostick		{position:initial;}
 span.block		{display:block;}
-.narrative:nth-of-type(2)	{display:block; font-style:italic}
 .version		{display:block; font-size:12px; position:absolute; right:0; top:0;}
 .version span	{color:#fff;}
 
 /*	WRAPPERS	*/
 .wrap_title						{padding-bottom:40px;}
 .wrap_reporting_org				{color:#ccc; font-size:18px; line-height:1.35em;}
-.wrap_title span				{display:block; font-size:42px; line-height:1.1em;}
-.wrap_title span:nth-of-type(2)	{font-size:30px; font-style:italic; line-height:1em;}
+.wrap_title	.narrative						{font-size:42px; line-height:1.1em;}
+.wrap_title	.narrative:nth-of-type(n+2)		{font-size:30px; margin-top:5px; line-height:1em;}
+.wrap_title	.narrative:nth-of-type(2)		{margin-top:10px;}
 .wrap_reporting_org div			{display:inline-block; padding-right:10px; vertical-align:top;}
 .wrap_iati_identifier			{background-color:rgba(0,14,32,0.7); color:#FFAB5E; font-size:18px; line-height:1.5em; margin:0 auto; margin:25px 0 0 -40px; padding:20px 40px; width:960px;}
 .wrap_iati_identifier.org_id	{margin-top:10px;}
@@ -56,7 +56,7 @@ span.block		{display:block;}
 .wrap_description				{margin:40px auto;}
 .wrap_description .text			{margin-bottom:30px;}
 .wrap_description .text .narrative					{font-size:1.0em; line-height:1.5em; unicode-bidi:embed; white-space:pre-line; word-spacing:0.05em;}
-.wrap_description .text .narrative:nth-of-type(2)	{display:block; font-style:italic; margin-top:15px;}
+.wrap_description .text .narrative:nth-of-type(n+2)	{display:block; margin-top:15px;}
 .wrap_description .text .narrative:first-letter		{text-transform:capitalize;}
 .wrap_default					{margin:0 auto; padding:20px 0 0 0;}
 .wrap_default .text				{color:#ccc; display:inline-block; font-size:14px; vertical-align:top; width:50%;}
