@@ -2,6 +2,7 @@ Development Portal (2020-04-30 shi)
 ==============================
 Update COVID-19 search text info to include tag
 Fix capital-spend percentage
+Add transaction description field for COVID-19 search
 
 
 Development Portal (2020-04-26 shi)
